Documentation updated